--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ djangorestframework-simplejwt==5.2.2
 filelock==3.8.0
 flatbuffers==23.5.26
 fonttools==4.39.2
+django
 gast==0.5.4
 google-auth==2.23.3
 google-auth-oauthlib==1.0.0
@@ -74,7 +75,6 @@ sqlparse==0.4.3
 sympy==1.11.1
 tensorboard==2.14.1
 tensorboard-data-server==0.7.1
-tensorflow==2.14.0
 tensorflow-estimator==2.14.0
 tensorflow-intel==2.14.0
 tensorflow-io-gcs-filesystem==0.31.0
